@@ -691,6 +691,8 @@ struct
      "declaration within selection header requires ISO C2y or later", 0 },
   { E_COMPLIT_SCLASS_C23, ERROR_LEVEL_ERROR,
     "compound literals with storage class specifier require ISO C23 or later", 0},
+  { W_ENUM_UNDERLYING_BITINT, ERROR_LEVEL_WARNING,
+    "enum's underlying type may not be a bit-prcise type in ISO C23", 0},
 };
 
 /* -------------------------------------------------------------------------------
